--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=8080
+# server.port=8080
 # настройки для работы с базой данных
-spring.datasource.url=jdbc:h2:./.database/my-database
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.datasource.url=jdbc:h2:./.database/my-database
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
